Add some button styles

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,5 +6,6 @@
 
 @import "./components/general.css";
 @import "./components/typography.css";
+@import "./components/buttons.css";
 
 @import "tailwindcss/utilities";
