Implement event-driven notifications via websocket

--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Pete!</title>
+  <script src="https://unpkg.com/@adonisjs/websocket-client"></script>
 </head>
 <body>
   {{ script('js/bundle') }}
