--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,5 +7,6 @@
 @import "./components/general.css";
 @import "./components/typography.css";
 @import "./components/buttons.css";
+@import "./components/notifications.css";
 
 @import "tailwindcss/utilities";
