--- a/resources/views/index.edge
+++ b/resources/views/index.edge
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Pete!</title>
-  <script src="https://unpkg.com/@adonisjs/websocket-client"></script>
 </head>
 <body>
   {{ script('js/bundle') }}
