--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,5 +8,6 @@
 @import "./components/typography.css";
 @import "./components/buttons.css";
 @import "./components/notifications.css";
+@import "./components/alerts.css";
 
 @import "tailwindcss/utilities";
